--- a/client/page/include/review_popup.html
+++ b/client/page/include/review_popup.html
@@ -11,29 +11,30 @@
 </head>
 <body>
   <section class="product-review-popup">
-    <h3>후기 작성</h3>
+    <h2>후기 작성</h2>
     <div class="review-popup__content">
-      <img src="../../assets/product_list/tangtang_jjolmyeon.jpg" alt="탱탱졸면" />
+      <img src="../../assets/product_detail/tangtang/detail_popup.png" alt="탱탱졸면" class="review-popup__img"/>
       <p class="review-popup__content-name">[풀무원] 탱탱쫄면 (4개입)</p>
     </div>
-    <form action="#" method="post" class="review-popup-form">
+    <form action="#" method="post" class="review-popupForm">
       <fieldset>
         <legend>후기 입력</legend>
-        <div class="review-form__group">
-          <div class="review-form__group-title">
-            <label for="review-title" class="review-title__input__label">제목</label>
-            <input type="text" name="review-title" id="review-title" class="review-title__input" required placeholder="제목을 입력해 주세요"/>
+        <div class="review-popupForm__group">
+          <div class="review-popupForm__group-title">
+            <label for="reviewPopup-title" class="reviewPopup-title__input-label">제목</label>
+            <input type="text" name="reviewPopup-title" id="reviewPopup-title" class="reviewPopup-title__input" required
+              placeholder="제목을 입력해 주세요" />
           </div>
-          <div class="review-form__group-description">
-            <label for="review-description" class="review-description__input__label">내용</label>
-            <textarea type="text" name="review-description" id="review-description" class="review-description__input"
+          <div class="review-popupForm__group-description">
+            <label for="reviewPopup-description" class="reviewPopup-description__input-label">내용</label>
+            <textarea type="text" name="reviewPopup-description" id="reviewPopup-description" class="reviewPopup-description__input"
               required
               placeholder="컬리는 믿을 수 있는 후기문화를 함께 만들어가고자 합니다. 식품 등의 표시광고에 대한 법률을 준수하고자 다음과 같은 부당한 상품평에 대해서는 별도 고지 없이 임시 대처, 비공개 전환, 삭제, 적립금 회수 등의 필요한 조치가 취해 질 수 있습니다.&#13;&#10;후기 작성 시 유의 사항&#13;&#10;• 개인의 주관적인 의견으로 인해 상품의 기능 및 효과에 대하여 오해의 소지가 있는 내용&#13;&#10;• 식품/건강기능식품과 관련하여 질병의 예방 및 치료, 체중감량(다이어트)에 효능효과가 있다는 내용&#13;&#10;• 일반 화장품을 기능성화장품의 효능효과가 있다는 내용을 통한 오인 표현&#13;&#10;• 의약외품을 의약품으로 오인하게 하는 표현&#13;&#10;• 생활화학제품을 본래 용도와 다르게 사용하는 내용 및 효능효과를 과장하는 내용&#13;&#10;• 욕설, 폭력성, 음란성, 상업성 등의 게시물 또는 구매 상품과 무관하거나 반복되는 동일 단어나 문장을 사용하여 판매자나 다른 이용자의 후기 이용을 판단되는 경우 • 구매한 상품이 아닌 캡쳐 사진, 타인 사진 도용, 포장 박스, 퍼플박스, 구매 상품을 구분할 수 없는 전체 사진 등 상품과 관련 없는 이미지, 동영상을 사용한 경우&#13;&#10;• 본인 또는 타인의 주민등록번호, (휴대)전화번호, 이메일 등 개인정보가 포함된 경우&#13;&#10;• 그 밖에 상품평으로 인해 다른 회원 또는 제3자에게 피해가 가해질 내용&#13;&#10;• 작성된 글과 첨부된 멀티미디어 파일 등으로 이루어진 각 상품평은 개인의 의견을 반영하므로, 게시된 내용에 대한 모든 책임은 작성자에게 있습니다. 또한 비정상적인 방법을 통해 후기를 작성하고 적립금을 취득한 경우 작성자에 법적 책임의 소지가 있음을 알려드립니다.&#13;&#10;※ 작성된 글과 첨부된 멀티미디어 파일 등으로 이루어진 각 상품평은 개인의 의견을 반영하므로, 게시된 내용에 대한 모든 책임은 작성자에게 있습니다. 또한 비정상적인 방법을 통해 후기를 작성하고 적립금을 취득한 경우 작성자에 법적 책임의 소지가 있음을 알려드립니다."></textarea>
           </div>
         </div>
-        <div class="review-form__button">
-          <button type="submit" class="review-form__button-cancel">취소</button>
-          <button type="submit" class="review-form__button-enroll">등록</button>
+        <div class="popupForm__button">
+          <button type="submit" class="popupForm__button-cancel">취소</button>
+          <button type="submit" class="popupForm__button-enroll">등록</button>
         </div>
       </fieldset>
     </form>
