--- a/client/css/include/review_popup.css
+++ b/client/css/include/review_popup.css
@@ -3,7 +3,6 @@
   height:630px;
   padding:32px;
   background:var(--white);
-  border:1px solid #ccc;
   border-radius:16px;
 }
 
@@ -73,6 +72,7 @@ fieldset{
   width:629px;
   height:44px;
   border:1px solid var(--gray-300);
+  border-radius:4px;
   padding:9px 0 9px 20px;
 }
 
@@ -94,7 +94,8 @@ fieldset{
   height:198px;
   vertical-align:top;
   padding:var(--spacing-base) var(--spacing-base) 0 var(--spacing-base);
-  border:1px solid var(=--gray-300);
+  border:1px solid var(--gray-300);
+  border-radius:4px;
   resize:none;
 }
 
